--- a/globe-btc/index.html
+++ b/globe-btc/index.html
@@ -2,7 +2,7 @@
 <html lang="en_US">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Realtime WebGL Globe Example</title>
     <meta name="description" content="A webgl earth making it easy to add shapes at coordinates in realtime.">
