--- a/globe/index.html
+++ b/globe/index.html
@@ -104,6 +104,8 @@
   <body>
 
   <div id="container"></div>
+  
+  <div id="info"></div>
 
   <script type="text/javascript" src="third-party/Detector.js"></script>
   <script type="text/javascript" src="third-party/three.min.js"></script>
